--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "formik": "^2.1.4",
     "js-cookie": "^2.2.1",
     "next": "9.4.4",
     "react": "16.13.1",
