--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "axios": "^0.19.2",
+    "express": "^4.17.1",
     "formik": "^2.1.4",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
